--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,16 +8,16 @@
         - @group.users.each do |user|
           %li.current-group__member
             = user.name
-    = link_to 'Edit', edit_group_path, class: 'current-group__edit-btn'
+    = link_to 'Edit', edit_group_path(@group), class: 'current-group__edit-btn'
 
   %article.messages
     = render @messages
 
 
-      .form
-        = form_with model: [@group, @message], html: { class: 'form_fields' }, local: true do |f|
-          = f.text_field :content, placeholder: 'type a message', class: 'form__content'
-            = f.label :image, class: 'form__image-label' do
-              = icon 'fas', 'image'
-              = f.file_field :image, class: 'form__file'
-        = f.submit 'Send', class: 'send-btn'
+  .form
+    = form_with model: [@group, @message], html: { class: 'form_fields' }, local: true do |f|
+      = f.text_field :content, placeholder: 'type a message', class: 'form__content'
+        = f.label :image, class: 'form__image-label' do
+          = icon 'fas', 'image'
+          = f.file_field :image, class: 'form__file'
+    = f.submit 'Send', class: 'send-btn'
