--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -15,7 +15,7 @@
 
 
   .form
-    = form_with model: [@group, @message], html: { class: 'form_fields' }, local: true do |f|
+    = form_with model: [@group, @message], html: { class: 'form__fields' }, local: true do |f|
       = f.text_field :content, placeholder: 'type a message', class: 'form__content'
         = f.label :image, class: 'form__image-label' do
           = icon 'fas', 'image'
